--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>El mundo de los anfibios</title>
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
-    
+    <header>
+        <img src="logotipo.png" alt="Logotipo">
+        <h1>La rana TORO</h1>
+    </header>
+    <nav>
+       <ul>
+            <li><a href="#inicio">Inicio</a></li>
+            <li><a href="#sobre-nosotros">Sobre Nosotros</a></li>
+            <li><a href="#servicios">Servicios</a></li>
+            <li><a href="#contacto">Contacto</a></li>
+
+       </ul>
+    </nav>  
 </body>
 </html>
