--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
             <li><a href="#contacto">Contacto</a></li>
 
        </ul>
-    </nav>  
+    </nav>
+    <section id= "noticias">
+        <h2>Noticias relevantes</h2>
+        <article>
+        <h2>La rana toro: un animal voraz</h2>
+        <p>La rana toro es uno de los animales mas voraces que existen,llegando a ingerir ratones, otras ranas y pequeños mamiferos</p>
+        </article>
+    </section>
+    <aside>
+        <h2>recomendado</h2>
+        <ul>
+            <li><a href="libro.html">El libro</a></li>
+            <li><a href="video.html">El video</a></li>
+        </ul>
+    </aside>  
 </body>
 </html>
