--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
     <header>
-        <img src="logotipo.png" alt="Logotipo">
-        <h1>La rana TORO</h1>
+        <img src="rana.jpg" alt="Logotipo">
+        <h1>LA RANA TORO</h1>
     </header>
+    <main>
+    <P>Esta web está dedicada al mundo de los anfibios,un lugar de encuetro con aficionados de todo el mundo</P>
+    </main>
     <nav>
        <ul>
             <li><a href="#inicio">Inicio</a></li>
@@ -28,7 +31,7 @@
         </article>
     </section>
     <aside>
-        <h2>recomendado</h2>
+        <h3>Recomendado</h3>
         <ul>
             <li><a href="libro.html">El libro</a></li>
             <li><a href="video.html">El video</a></li>
