--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El mundo de los anfibios</title>
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="ranaico.ico">
 </head>
 <body>
     <header>
