--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
        </ul>
     </nav>
+    <main>
     <section id= "noticias">
         <h2>Noticias relevantes</h2>
         <article>
@@ -30,12 +31,16 @@
         <p>La rana toro es uno de los animales mas voraces que existen,llegando a ingerir ratones, otras ranas y pequeños mamiferos</p>
         </article>
     </section>
+    </main>
     <aside>
         <h3>Recomendado</h3>
         <ul>
             <li><a href="libro.html">El libro</a></li>
             <li><a href="video.html">El video</a></li>
         </ul>
-    </aside>  
+    </aside> 
+    <footer>
+        <p>Copyright 2024</p>
+    </footer> 
 </body>
 </html>
