--- a/index.html
+++ b/index.html
@@ -39,8 +39,31 @@
             <li><a href="video.html">El video</a></li>
         </ul>
     </aside> 
+    
+    <div class="container">
+        <h1>Contacto</h1>
+        <form action="#" method="post">
+
+           <label for="nombre">Nombre</label>
+           <input type="text" id="nombre" name="nombre" required>
+
+           <label for="correo">Correo electrónico</label>
+           <input type="email" id="correo" name="correo" required>
+
+           <label for="asunto">Asunto:</label>
+           <input type="text" id="asunto" name="asunto" required>
+
+           <label for="mensaje">Mensaje:</label>
+           <textarea= id="mensaje" name="mensaje" row="20" required></textarea>
+           <button type="submit">Enviar</button>
+
+        </form>
+
+    </div>
+
     <footer>
         <p>Copyright 2024</p>
+        <p>Tel:876-766-554</p>
     </footer> 
 </body>
 </html>
