--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     
     <div class="container">
         <h1>Contacto</h1>
+
         <form action="#" method="post">
 
            <label for="nombre">Nombre</label>
@@ -54,8 +55,8 @@
            <input type="text" id="asunto" name="asunto" required>
 
            <label for="mensaje">Mensaje:</label>
-           <textarea= id="mensaje" name="mensaje" row="20" required></textarea>
-           <button type="submit">Enviar</button>
+           <textarea id="mensaje" name= "mensaje" rows="4" cols="80" placeholder="escribe aqui" required></textarea>
+           <button type="submit">Enviar formulario</button>
 
         </form>
 
