--- a/index.html
+++ b/index.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El mundo de los anfibios</title>
     <link rel="icon" href="ranaico.ico">
 </head>
+
 <body>
     <header>
         <img src="rana.jpg" alt="Logotipo">
         <h1>LA RANA TORO</h1>
     </header>
     <main>
-    <P>Esta web está dedicada al mundo de los anfibios,un lugar de encuetro con aficionados de todo el mundo</P>
+        <P>Esta web está dedicada al mundo de los anfibios,un lugar de encuetro con aficionados de todo el mundo</P>
     </main>
     <nav>
-       <ul>
+        <ul>
             <li><a href="#inicio">Inicio</a></li>
             <li><a href="#sobre-nosotros">Sobre Nosotros</a></li>
             <li><a href="#servicios">Servicios</a></li>
             <li><a href="#contacto">Contacto</a></li>
 
-       </ul>
+        </ul>
     </nav>
     <main>
-    <section id= "noticias">
-        <h2>Noticias relevantes</h2>
-        <article>
-        <h2>La rana toro: un animal voraz</h2>
-        <p>La rana toro es uno de los animales mas voraces que existen,llegando a ingerir ratones, otras ranas y pequeños mamiferos</p>
-        </article>
-    </section>
+        <section id="noticias">
+            <h2>Noticias relevantes</h2>
+            <article>
+                <h2>La rana toro: un animal voraz</h2>
+                <p>La rana toro es uno de los animales mas voraces que existen,llegando a ingerir ratones, otras ranas y
+                    pequeños mamiferos</p>
+            </article>
+        </section>
     </main>
     <aside>
         <h3>Recomendado</h3>
@@ -38,25 +41,25 @@
             <li><a href="libro.html">El libro</a></li>
             <li><a href="video.html">El video</a></li>
         </ul>
-    </aside> 
-    
+    </aside>
+
     <div class="container">
         <h1>Contacto</h1>
 
         <form action="#" method="post">
 
-           <label for="nombre">Nombre</label>
-           <input type="text" id="nombre" name="nombre" required>
+            <label for="nombre">Nombre</label>
+            <input type="text" id="nombre" name="nombre" required>
 
-           <label for="correo">Correo electrónico</label>
-           <input type="email" id="correo" name="correo" required>
+            <label for="correo">Correo electrónico</label>
+            <input type="email" id="correo" name="correo" required>
 
-           <label for="asunto">Asunto:</label>
-           <input type="text" id="asunto" name="asunto" required>
+            <label for="asunto">Asunto:</label>
+            <input type="text" id="asunto" name="asunto" required>
 
-           <label for="mensaje">Mensaje:</label>
-           <textarea id="mensaje" name= "mensaje" rows="4" cols="80" placeholder="escribe aqui" required></textarea>
-           <button type="submit">Enviar formulario</button>
+            <label for="mensaje">Mensaje:</label>
+            <textarea id="mensaje" name="mensaje" rows="4" cols="80" placeholder="escribe aqui" required></textarea>
+            <button type="submit">Enviar formulario</button>
 
         </form>
 
@@ -65,6 +68,7 @@
     <footer>
         <p>Copyright 2024</p>
         <p>Tel:876-766-554</p>
-    </footer> 
+    </footer>
 </body>
+
 </html>
