--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>LA RANA TORO</h1>
     </header>
     <main>
-        <P>Esta web está dedicada al mundo de los anfibios,un lugar de encuetro con aficionados de todo el mundo</P>
+        <p>Esta web está dedicada al mundo de los anfibios,un lugar de encuetro con aficionados de todo el mundo</P>
     </main>
     <nav>
         <ul>
