--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 </head>
 
 <body>
+
+    <h1>El mundo de los anfibios</h1>
     <header>
         <img src="rana.jpg" alt="Logotipo">
-        <h1>LA RANA TORO</h1>
+        <h2>LA RANA TORO</h2>
     </header>
-    <main>
-        <p>Esta web está dedicada al mundo de los anfibios,un lugar de encuetro con aficionados de todo el mundo</P>
-    </main>
     <nav>
         <ul>
             <li><a href="#inicio">Inicio</a></li>
@@ -26,15 +25,20 @@
         </ul>
     </nav>
     <main>
-        <section id="noticias">
-            <h2>Noticias relevantes</h2>
-            <article>
-                <h2>La rana toro: un animal voraz</h2>
-                <p>La rana toro es uno de los animales mas voraces que existen,llegando a ingerir ratones, otras ranas y
-                    pequeños mamiferos</p>
-            </article>
-        </section>
+
+    <article>
+        <h2>La rana toro: un animal voraz</h2>
+        <p>La rana toro es uno de los animales mas voraces que existen,llegando a ingerir ratones, otras ranas y
+            pequeños mamiferos</p>
+            <section id="noticias">
+                <h3>Noticias relevantes</h3>
+                <p>Una rana toro se come una serpiente</P>
+            </section>
+
+    </article>
+       
     </main>
+  
     <aside>
         <h3>Recomendado</h3>
         <ul>
@@ -44,7 +48,7 @@
     </aside>
 
     <div class="container">
-        <h1>Contacto</h1>
+        <h3>Contacto</h3>
 
         <form action="#" method="post">
 
