--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </ul>
     </aside>
 
-    <div class="container">
+    <section id="container">
         <h3>Contacto</h3>
 
         <form action="#" method="post">
@@ -67,7 +67,7 @@
 
         </form>
 
-    </div>
+    </section>
 
     <footer>
         <p>Copyright 2024</p>
